# supplychain

./: .env.example  .gitignore  CLAUDE.md  Makefile
.claude/agents/: codebase_analyzer.md  codebase_locator.md  codebase_pattern_finder.md  debugger.md  git_commit_creator.md  thoughts_and_research_evaluator.md  thoughts_and_research_locator.md  web_search_researcher.md
.claude/commands/: commit.md  create_feature.md  create_handoff.md  create_implementation_strategy.md  debug.md  research_codebase.md  resume_from_handoff.md  validate_plan.md  write_tests.md
backend/: README.md  pyproject.toml
backend/scripts/: generate_sample_data.py
backend/src/: config.py
backend/src/api/: dependencies.py  inventory.py  locations.py  main.py  products.py  suppliers.py  transactions.py
backend/src/data/: base.py  database.py  models.py
backend/src/services/: inventory_service.py  location_service.py  supplier_service.py  transaction_service.py
backend/tests/: conftest.py  test_api.py
backend/tests/inventory-management/: README.md  __init__.py  test_advanced_features.py  test_advanced_transactions.py  test_inventory_api.py
docs/: Product_Requirements.md  Software_Architecture.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/forms/: LocationForm.tsx  ProductForm.tsx  SupplierForm.tsx  (+1 more)
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/utils/: requestQueue.ts
specifications/0.initial-inventory-management-setup/0.backend-inventory-management/: feature.md
(+17 files in other folders)
